update the design of the leading page.

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.7",
     "motion": "^12.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "svelte": "^5.19.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
