--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@img-comparison-slider/react": "^8.0.2",
     "clsx": "^2.1.1",
     "gsap": "^3.12.7",
+    "img-comparison-slider": "^8.0.6",
     "motion": "^12.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
